feat : add store swagger docummentation
